# waitlist-explorer

./: .gitignore  app.py  pyproject.toml
.github/workflows/: waitlist.yml
data/: centers.txt  centers_distance.txt  centers_geocoded.jsonl
lib/: Center.py  Report.py  optn.py  util.py
scripts/: __init__.py  geocode_centers.py  geodist_centers.py  scrape_waitlist.py
